fix WFM/Requests - shiftTradeRequest 'Schdule' column height issue

--- a/Teleopti.Ccc.Web/Teleopti.Ccc.Web/WFM/css/_requests.scss
+++ b/Teleopti.Ccc.Web/Teleopti.Ccc.Web/WFM/css/_requests.scss
@@ -184,8 +184,11 @@
 		}
 	}
 
+	.requests-table-header{
+		margin-bottom: 10px;
+	}
+
 	.ui-grid {
-		margin-top: 10px;
 		.ui-grid-cell-contents.ui-grid-cell-contents {
 			width: 85%;
 			text-align: left;
